--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "@babel/register": "^7.12.1",
+    "@wdio/allure-reporter": "^6.7.2",
+    "@wdio/browserstack-service": "^6.7.3",
     "@wdio/cli": "^6.7.2",
+    "@wdio/junit-reporter": "^6.7.0",
     "@wdio/local-runner": "^6.7.2",
     "@wdio/mocha-framework": "^6.7.0",
+    "@wdio/selenium-standalone-service": "^6.7.3",
     "@wdio/spec-reporter": "^6.7.0",
     "@wdio/sync": "^6.7.2",
     "babel-cli": "^6.26.0",
